<resources>
    <string name="app_name">Entreés</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_taking">Order Taking</string>
    <string name="order_history">Order History</string>
    <string name="profile">Profile</string>
    <string name="title_activity_test_class">TestClass</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">Search</string>
    <string name="day_orders">Day Orders</string>
    <string name="total_orders">Total Orders</string>
    <string name="rank">Rank</string>
    <string name="personal_details">Personal Details</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="ok">Ok</string>
    <string name="order">Order</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="cart_count">0</string>
    <string name="totalOrderValue">"Total Value : "</string>
    <string name="items_not_added_to_cart">Items not added to cart</string>
    <string name="print">Print</string>
    <string name="settings">settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="app_theme">App Theme</string>
    <string name="no_orders">No Orders!</string>
    <string name="remove_item">remove_item</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
</resources>