<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/orderTaking">

    <fragment
        android:id="@+id/orderHistory"
        android:name="com.sdapps.entres.home.history.HistoryFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/orderTaking"
        android:name="com.sdapps.entres.home.ordertaking.OrderTakingFragment"
        android:label="@string/order_taking"
        tools:layout="@layout/fragment_order_taking" />

    <fragment
        android:id="@+id/profile"
        android:name="com.sdapps.entres.home.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
