<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/orderHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/order_history"
                android:background="@drawable/print_shape"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/order_history"
                android:tooltipText="@string/order_history"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                />

            <ImageView
                android:id="@+id/profileView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/profile"
                android:background="@drawable/print_shape"
                android:tooltipText="Profile"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/profile"
                android:clickable="true"
                android:focusable="true"
                />



        </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/table_items"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_below="@id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="3"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/locationViewFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            app:srcCompat = "@drawable/baseline_location_on_24"
            android:layout_margin="35dp"/>


    </FrameLayout>
</RelativeLayout>