<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_shape_new" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/appNameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_font"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="@color/black"
            android:textSize="80sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLayout"
            android:layout_width="340dp"
            android:layout_height="460dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:elevation="10dp"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="Login"
                    android:fontFamily="@font/righteous_font"
                    android:textSize="35sp"
                    android:layout_marginStart="30dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:layout_alignParentEnd="true"
                    android:importantForAutofill="noExcludeDescendants"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/login_username_shape"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:importantForAutofill="noExcludeDescendants"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:padding="20dp"
                    android:layout_below="@id/username"
                    android:inputType="textPassword"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/login_username_shape"
                    />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:enabled="true"
                    android:fontFamily="@font/righteous_font"
                    android:padding="10dp"
                    android:text="@string/action_sign_in"
                    style="@style/Button"
                    android:textSize="20sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

<!--
    <TextView
        android:id="@+id/appNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/righteous_font"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="80sp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameLogin"
        android:indeterminate="true"
        android:visibility="visible"
        app:indicatorColor="@color/red"
        app:indicatorSize="26dp"
        android:layout_centerHorizontal="true"
        app:trackColor="@color/bg_color"
        app:trackThickness="4dp" />

    <FrameLayout
        android:id="@+id/cardLayout"
        android:layout_width="340dp"
        android:layout_height="460dp"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="Login"
                    android:fontFamily="@font/righteous_font"
                    android:textSize="35sp"
                    android:layout_marginStart="30dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/login_username_shape"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:padding="20dp"
                    android:layout_below="@id/username"
                    android:inputType="textPassword"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/login_username_shape"
                    />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:enabled="true"
                    android:fontFamily="@font/righteous_font"
                    android:padding="10dp"
                    android:text="@string/action_sign_in"
                    style="@style/Button"
                    android:textSize="20sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>-->

</RelativeLayout>